src/components/projects/Projects.module.sass
@import '../../globals'
    
.projectsContainer
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    background: $secondary
    padding: 50px 25px
    h2
        font-weight: 600
        margin: 0
    p
        font-weight: 500
        margin-block: 10px 25px
    a
        color: $accent
    .projectList
        display: grid
        grid-template-columns: repeat(3, 1fr)
        grid-gap: 50px
        .projectCard
            img
                @include noSelectDrag()
                width: 256px
            h4
                font-weight: 500
                font-size: 14px
                margin: 0
            a
                font-size: 14px
                text-decoration: none
                color: $black
                &:hover
                    color: $accent
                    transition: color 0.5s ease

            p
                font-size: 12px
                padding: 0
                margin: 0
                max-width: 250px
                line-height: 1
            &:hover
                animation: slideToTop 0.5s ease
                transform: translateY(-10px)

@media (max-width: 992px)
    .projectsContainer
        .projectList
            grid-template-columns: repeat(2, 1fr) 
            grid-gap: 25px

@media (max-width: 768px)
    .projectsContainer
        align-items: flex-start
        h2
            font-size: 22px
        p
            font-size: 14px
            margin-block: 5px 30px
        .projectList
            .projectCard
                img
                    width: 175px
        

